deployment/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: simrs
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
